<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/bg1"

    tools:context=".Activities.CreateAccountActivity">

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"

        android:paddingHorizontal="35dp"
        android:paddingVertical="44dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:background="@drawable/bg_card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="@string/logo"
            android:textSize="57.2sp"
            android:textColor="@color/white"
            android:fontFamily="@font/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="30dp"

            android:text="@string/signup"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:fontFamily="@font/abel_regular" />

        <EditText
            android:id="@+id/CreateAccount_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_inputbox"
            android:singleLine="true"
            android:maxLines="1"


        android:fontFamily="@font/abhayalibre_extrabold"

            android:hint="@string/name"
            android:padding="14dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/CreateAccount_input_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="23dp"
            android:background="@drawable/bg_inputbox"
            android:singleLine="true"
            android:maxLines="1"

            android:fontFamily="@font/abhayalibre_extrabold"

            android:hint="@string/passwd"
            android:padding="14dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/CreateAccount_input_repasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="23dp"
            android:background="@drawable/bg_inputbox"
            android:singleLine="true"
            android:maxLines="1"

            android:fontFamily="@font/abhayalibre_extrabold"

            android:hint="@string/re_passwd"
            android:padding="14dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/CreateAccount_btn_createaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingVertical="12dp"
            android:layout_marginTop="36dp"

            android:background="@drawable/bg_submit_button"

            android:text="@string/submit"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/abhayalibre_extrabold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>